// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleDropDown /> can render with labels 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RuleDropDown
    className={null}
    onChange={[Function]}
    options={
        Array [
            "foo",
            "bar",
            "baz",
          ]
    }
    placeholder=""
    value=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="rule-drop-down__spacer"
/>,
        <select
          className="rule-drop-down__options"
          defaultValue=""
          onChange={[Function]}
          value=""
>
          
          <option
                    value="foo"
          >
                    foo
          </option>
          <option
                    value="bar"
          >
                    bar
          </option>
          <option
                    value="baz"
          >
                    baz
          </option>
</select>,
      ],
      "className": "rule-drop-down",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "rule-drop-down__spacer",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "",
            Array [
              <option
                value="foo"
>
                foo
</option>,
              <option
                value="bar"
>
                bar
</option>,
              <option
                value="baz"
>
                baz
</option>,
            ],
          ],
          "className": "rule-drop-down__options",
          "defaultValue": "",
          "onChange": [Function],
          "value": "",
        },
        "ref": null,
        "rendered": Array [
          "",
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": "foo",
              "value": "foo",
            },
            "ref": null,
            "rendered": "foo",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "bar",
              "value": "bar",
            },
            "ref": null,
            "rendered": "bar",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": "baz",
              "value": "baz",
            },
            "ref": null,
            "rendered": "baz",
            "type": "option",
          },
        ],
        "type": "select",
      },
    ],
    "type": "label",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="rule-drop-down__spacer"
/>,
          <select
            className="rule-drop-down__options"
            defaultValue=""
            onChange={[Function]}
            value=""
>
            
            <option
                        value="foo"
            >
                        foo
            </option>
            <option
                        value="bar"
            >
                        bar
            </option>
            <option
                        value="baz"
            >
                        baz
            </option>
</select>,
        ],
        "className": "rule-drop-down",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "rule-drop-down__spacer",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "",
              Array [
                <option
                  value="foo"
>
                  foo
</option>,
                <option
                  value="bar"
>
                  bar
</option>,
                <option
                  value="baz"
>
                  baz
</option>,
              ],
            ],
            "className": "rule-drop-down__options",
            "defaultValue": "",
            "onChange": [Function],
            "value": "",
          },
          "ref": null,
          "rendered": Array [
            "",
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "value": "foo",
              },
              "ref": null,
              "rendered": "foo",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "bar",
                "value": "bar",
              },
              "ref": null,
              "rendered": "bar",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": "baz",
                "value": "baz",
              },
              "ref": null,
              "rendered": "baz",
              "type": "option",
            },
          ],
          "type": "select",
        },
      ],
      "type": "label",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<RuleDropDown /> can render without labels 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RuleDropDown
    className={null}
    onChange={[Function]}
    options={
        Array [
            Array [
              "foo",
              "bar",
            ],
            Array [
              "baz",
              "buzz",
            ],
          ]
    }
    placeholder=""
    value=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="rule-drop-down__spacer"
/>,
        <select
          className="rule-drop-down__options"
          defaultValue=""
          onChange={[Function]}
          value=""
>
          
          <option
                    value="foo"
          >
                    bar
          </option>
          <option
                    value="baz"
          >
                    buzz
          </option>
</select>,
      ],
      "className": "rule-drop-down",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "rule-drop-down__spacer",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "",
            Array [
              <option
                value="foo"
>
                bar
</option>,
              <option
                value="baz"
>
                buzz
</option>,
            ],
          ],
          "className": "rule-drop-down__options",
          "defaultValue": "",
          "onChange": [Function],
          "value": "",
        },
        "ref": null,
        "rendered": Array [
          "",
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": "bar",
              "value": "foo",
            },
            "ref": null,
            "rendered": "bar",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "buzz",
              "value": "baz",
            },
            "ref": null,
            "rendered": "buzz",
            "type": "option",
          },
        ],
        "type": "select",
      },
    ],
    "type": "label",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="rule-drop-down__spacer"
/>,
          <select
            className="rule-drop-down__options"
            defaultValue=""
            onChange={[Function]}
            value=""
>
            
            <option
                        value="foo"
            >
                        bar
            </option>
            <option
                        value="baz"
            >
                        buzz
            </option>
</select>,
        ],
        "className": "rule-drop-down",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "rule-drop-down__spacer",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "",
              Array [
                <option
                  value="foo"
>
                  bar
</option>,
                <option
                  value="baz"
>
                  buzz
</option>,
              ],
            ],
            "className": "rule-drop-down__options",
            "defaultValue": "",
            "onChange": [Function],
            "value": "",
          },
          "ref": null,
          "rendered": Array [
            "",
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": "bar",
                "value": "foo",
              },
              "ref": null,
              "rendered": "bar",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "buzz",
                "value": "baz",
              },
              "ref": null,
              "rendered": "buzz",
              "type": "option",
            },
          ],
          "type": "select",
        },
      ],
      "type": "label",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
